Convert QueryTester to Juint5 test